<resources>
    <string name="app_name">KnowYourGovernment</string>
    <string name="app_label">Know Your Government</string>
    <string name="office">Office</string>
    <string name="party">Party</string>
    <string name="name">Name</string>
    <string name="separator">Separator</string>
    <string name="info">info</string>
    <string name="search">search</string>
    <string name="locationdata">LocationData</string>
    <string name="know_your_government">Know Your Government</string>
    <string name="backgroundimage">BackGroundImage</string>
    <string name="powered_by">powered by</string>
    <string name="google_civic_information_api"><u>Google Civic Information API</u></string>
    <string name="_2020_yuetao_zhu">© 2020, Yuetao Zhu</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="todo">TODO</string>
    <string name="addressLabel">Address:</string>
    <string name="officialaddress">officialAddress</string>
    <string name="phoneLabel">Phone:</string>
    <string name="phone">phoneNumber</string>
    <string name="email">email</string>
    <string name="website">Website</string>
    <string name="emaiLabel">emai:</string>
    <string name="websiteLabel">Website:</string>
    <string name="officiallocationdata">LocationData</string>
    <string name="officialoffice">Office</string>
    <string name="officialname">Name</string>
    <string name="officialparty">Party</string>
</resources>