<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/officialConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/officialLocationData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/officiallocationdata"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/officialOffice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/officialoffice"
                    android:textSize="36sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/officialLocationData" />

                <TextView
                    android:id="@+id/officialName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/officialname"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/officialOffice" />

                <TextView
                    android:id="@+id/officialParty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/officialparty"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/officialName" />

                <ImageView
                    android:id="@+id/officialPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/todo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/officialParty"
                    app:srcCompat="@drawable/missing" />

                <TextView
                    android:id="@+id/addressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/addressLabel"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/officialPicture" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/officialaddress"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/addressLabel"
                    app:layout_constraintTop_toTopOf="@+id/addressLabel" />

                <TextView
                    android:id="@+id/phoneLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/phoneLabel"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/addressLabel"
                    app:layout_constraintTop_toBottomOf="@+id/address" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/addressLabel"
                    app:layout_constraintStart_toStartOf="@+id/address"
                    app:layout_constraintTop_toTopOf="@+id/phoneLabel" />

                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/emaiLabel"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/phoneLabel"
                    app:layout_constraintTop_toBottomOf="@+id/phone" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/phone"
                    app:layout_constraintTop_toTopOf="@+id/emailLabel" />

                <TextView
                    android:id="@+id/websiteLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/websiteLabel"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/emailLabel"
                    app:layout_constraintTop_toBottomOf="@+id/email" />

                <TextView
                    android:id="@+id/website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/email"
                    app:layout_constraintTop_toTopOf="@+id/websiteLabel" />

                <ImageView
                    android:id="@+id/socialMediaImage1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    android:contentDescription="@string/todo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/website"
                    app:srcCompat="@drawable/facebook" />

                <ImageView
                    android:id="@+id/socialMediaImage2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:contentDescription="@string/todo"
                    app:layout_constraintStart_toEndOf="@+id/socialMediaImage1"
                    app:layout_constraintTop_toTopOf="@+id/socialMediaImage1"
                    app:srcCompat="@drawable/twitter" />

                <ImageView
                    android:id="@+id/socialMediaImage3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:contentDescription="@string/todo"
                    app:layout_constraintStart_toEndOf="@+id/socialMediaImage2"
                    app:layout_constraintTop_toTopOf="@+id/socialMediaImage2"
                    app:srcCompat="@drawable/youtube" />

                <ImageView
                    android:id="@+id/partyImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/todo"
                    app:layout_constraintBottom_toBottomOf="@+id/officialPicture"
                    app:layout_constraintEnd_toEndOf="@+id/officialPicture"
                    app:layout_constraintStart_toStartOf="@+id/officialPicture" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>